chg: [models] Removed field proxy_token from the user model.
