# api/serializers.py
@@ -27,7 +27,6 @@ class UserInputSerializer(serializers.ModelSerializer):
     last_name = serializers.CharField(max_length=150, required=True)
     password = serializers.CharField(max_length=200, required=True)
     phone_number = serializers.CharField(max_length=30)
-    proxy_token = serializers.CharField(max_length=255)
     is_staff = serializers.BooleanField(default=False)
 
     class Meta:
@@ -39,7 +38,6 @@ class UserInputSerializer(serializers.ModelSerializer):
             "email",
             "password",
             "phone_number",
-            "proxy_token",
             "is_staff",
         ]
 
